# SDL-1.2

./: .gitignore  CMakeLists.txt  Makefile.dc  Makefile.in  Makefile.os2  README.DC  README.Git  README.MiNT  README.OS2  README.RISCOS  README.Watcom  README.md  WhatsNew  configure  configure.ac  docs.html
acinclude/: libtool.m4
cmake/: SDL_GenerateConfig.cmake
include/: SDL_config.h.in  SDL_config_dreamcast.h  SDL_cpuinfo.h  SDL_dreamcast.h  SDL_endian.h  SDL_opengl.h  SDL_stdinc.h  SDL_video.h  symbols.h
os2/FSLib/: FSLib.c  FSLib.h  build.patch
os2/h/: FSLib.h
src/audio/: SDL_audio.c  SDL_sysaudio.h
src/audio/dart/: SDL_dart.c  SDL_dart.h
src/audio/dsp/: SDL_dspaudio.c
src/audio/mint/: SDL_mintaudio.c  SDL_mintaudio.h  SDL_mintaudio_dma8.c  SDL_mintaudio_gsxb.h  SDL_mintaudio_it.S  SDL_mintaudio_xbios.c
src/cdrom/dc/: SDL_syscdrom.c
src/cdrom/mint/: SDL_syscdrom.c
src/cdrom/os2/: SDL_syscdrom.c
src/cpuinfo/: SDL_cpuinfo.c
src/events/: SDL_keyboard.c
src/hermes/: HeadMMX.h  HeadX86.h  common.inc
src/joystick/bsd/: SDL_sysjoystick.c
src/joystick/darwin/: SDL_sysjoystick.c
src/joystick/dc/: SDL_sysjoystick.c
src/joystick/mint/: SDL_sysjoystick.c
src/joystick/os2/: SDL_sysjoystick.c
src/loadso/dlopen/: SDL_sysloadso.c
src/loadso/os2/: SDL_sysloadso.c
src/main/win32/: SDL_win32_main.c
src/stdlib/: SDL_iconv.c  SDL_malloc.c  SDL_qsort.c  SDL_string.c
src/thread/dc/: SDL_syscond.c  SDL_sysmutex.c  SDL_syssem.c  SDL_systhread.c
src/thread/pthread/: SDL_syscond.c  SDL_sysmutex.c  SDL_syssem.c  SDL_systhread.c
src/thread/win32/: SDL_systhread.c
src/timer/dc/: SDL_systimer.c
src/timer/mint/: SDL_systimer.c
src/timer/wince/: SDL_systimer.c
src/video/: SDL_blit.c  SDL_blit.h  SDL_blit_A.c  SDL_blit_N.c  SDL_cursor.c  SDL_gamma.c  SDL_pixels.c  SDL_stretch.c  SDL_surface.c  SDL_sysvideo.h  SDL_video.c
src/video/ataricommon/: SDL_ataric2p.S  SDL_ataric2p_s.h  SDL_atarieddi.S  SDL_atarieddi_s.h  SDL_atarievents.c  SDL_atarievents_c.h  SDL_atarikeys.h  SDL_atarimxalloc.c  SDL_atarimxalloc_c.h  SDL_atarixbra.c  SDL_atarixbra_c.h  SDL_biosevents.c  SDL_gemdosevents.c  SDL_geminit.c  SDL_geminit_c.h  SDL_ikbdevents.c  SDL_ikbdevents_c.h  SDL_ikbdinterrupt.S  SDL_ikbdinterrupt_s.h  SDL_xbiosevents.c  SDL_xbiosevents_c.h  (+2 more)
test/: Makefile.in  Makefile.os2  acinclude.m4  checkkeys.c  configure  configure.ac  testoverlay.c  testplatform.c  testsprite.c  testwm.c
watcom/: SDL.exports  makefile  objdef.inc
(+68 files in other folders)
